--- a/cv/index.html
+++ b/cv/index.html
@@ -3,6 +3,6 @@ layout: default
 title: CV
 ---
 <div class="blurb">
-  <h1>Jason Smith</h1>
+  <h1>{{ site.jason }}</h1>
     <p>Testing 1, 2, 3.</p>
 </div><!-- /.blurb -->
