--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ title: Jason Smith
 ---
 <div class="blurb">
   <h1>Hi, I'm {{ page.jason }}!</h1>
+    <p>You could also call me {{ page.jason_plain }} or {{ page.author }}!</p>
     <p>You may remember me from such educational films as "Watch Out for the Chainsaw!" and "Look Before Turning Left!". <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
