Use site variables since they're working

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@ layout: default
 title: Jason Smith
 ---
 <div class="blurb">
-  <h1>Hi, I'm {{ page.jason }}!</h1>
-    <p>You could also call me {{ page.jason_plain }}, {{ page.author }}, {{ site.jason }}, or {{ site.jason_plain }}!</p>
+  <h1>Hi, I'm {{ site.jason }}!</h1>
     <p>You may remember me from such educational films as "Watch Out for the Chainsaw!" and "Look Before Turning Left!". <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
